Added payment gateway in admin payment service

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt": {
     "Key": "RaviTechnical@1995from123456789abcdefghijklmnopqrstuvwxyz",
-    "Issuer": "raviglobaltech95.com" 
+    "Issuer": "raviglobaltech95.com"
   },
   "Email": {
     "From": "ravis3682@gmail.com",
@@ -19,5 +19,9 @@
     "SmtpPort": 587,
     "User": "ravis3682@gmail.com",
     "Pass": "cnjx wgzy tdjm vkcn"
+  },
+  "Razorpay": {
+    "Key": "rzp_test_S9ZbmZtFSnqru0",
+    "Secret": "1emIiiH3PLnIAZQW3VIWvJ8q"
   }
 }
